translate canidate tested

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -249,7 +249,7 @@
 	"arenella-new-candidate-btn-publish": "Publish",
 	"arenella-new-candidate-candidate-id": "Candidate Id",
 	"arenella-new-candidate-contract": "Contract",
-	"arenella-new-candidate-country": "arenella-new-candidate-country",
+	"arenella-new-candidate-country": "Country",
 	"arenella-new-candidate-curriculum": "Curriculum",
 	"arenella-new-candidate-day": "Day",
 	"arenella-new-candidate-days-on-site": "Days On Site (per Week)",
@@ -774,9 +774,7 @@
 	"register-recruiter-success": "Your request has been submitted. Once accepted an email will be sent with your login details.",
 	"register-recruiter-success-title": "Success",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
-	"stat-all": "",
 	"stat-candidate-availability": "Candidate Availability",
-	"stat-general-stats": "",
 	"stat-job-board-views": "Job Board Views",
 	"stat-jobboard-views": "Jobboard Views",
 	"stat-listing-views": "Job-board Views",
