--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -80,8 +80,8 @@
 	"arenella-app-menu-community": "Comunità",
 	"arenella-app-menu-emails": "E-mails",
 	"arenella-app-menu-faq": "Faq",
-	"arenella-app-menu-job-board": "Bacheca di lavoro",
-	"arenella-app-menu-jobs": "Jobs",
+	"arenella-app-menu-job-board": "Lavoro",
+	"arenella-app-menu-jobs": "Lavoro",
 	"arenella-app-menu-login": "Login",
 	"arenella-app-menu-mp": "Mercato",
 	"arenella-app-menu-new": "Nuovo",
@@ -774,9 +774,7 @@
 	"register-recruiter-success": "La tua richiesta è stata inviata. Una volta accettato, verrà inviata un'e-mail con i dati di accesso.",
 	"register-recruiter-success-title": "Successo",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
-	"stat-all": "Tutti",
 	"stat-candidate-availability": "Disponibilità del candidato",
-	"stat-general-stats": "Statistiche generali",
 	"stat-job-board-views": "Visualizzazioni della bacheca di lavoro",
 	"stat-jobboard-views": "Visualizzazioni della bacheca di lavoro",
 	"stat-listing-views": "Visualizzazioni della bacheca di lavoro",
