--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -80,8 +80,8 @@
 	"arenella-app-menu-community": "Gemeenschap",
 	"arenella-app-menu-emails": "E-mails",
 	"arenella-app-menu-faq": "Faq",
-	"arenella-app-menu-job-board": "Jobbord",
-	"arenella-app-menu-jobs": "Jobs",
+	"arenella-app-menu-job-board": "Banen",
+	"arenella-app-menu-jobs": "Banen",
 	"arenella-app-menu-login": "Log in",
 	"arenella-app-menu-mp": "Marktplaats",
 	"arenella-app-menu-new": "Nieuwe",
@@ -246,7 +246,7 @@
 	"arenella-new-candidate-btn-add": "Toevoegen",
 	"arenella-new-candidate-btn-back": "Terug",
 	"arenella-new-candidate-btn-delete": "Verwijderen",
-	"arenella-new-candidate-btn-publish": "Publiceren",
+	"arenella-new-candidate-btn-publish": "Publiceer",
 	"arenella-new-candidate-candidate-id": "Kandidaat-id",
 	"arenella-new-candidate-contract": "Contract",
 	"arenella-new-candidate-country": "Land",
@@ -366,9 +366,9 @@
 	"arenella-recruiter-listing-btn-confirm": "Bevestigen",
 	"arenella-recruiter-listing-btn-create-from-spec": "Creëer van spec",
 	"arenella-recruiter-listing-btn-delete": "Verwijderen",
-	"arenella-recruiter-listing-btn-edit": "Bewerking",
+	"arenella-recruiter-listing-btn-edit": "Bewerk",
 	"arenella-recruiter-listing-btn-publicity": "Publiciteit",
-	"arenella-recruiter-listing-btn-publish": "Publiceren",
+	"arenella-recruiter-listing-btn-publish": "Publiceer",
 	"arenella-recruiter-listing-city": "Stad",
 	"arenella-recruiter-listing-company": "Bedrijf",
 	"arenella-recruiter-listing-company-name": "Bedrijfsnaam",
@@ -421,7 +421,7 @@
 	"arenella-recruiter-mp-add-btn-add": "Toevoegen",
 	"arenella-recruiter-mp-add-btn-back": "Terug",
 	"arenella-recruiter-mp-add-btn-create-by-spec": "Creëer op specificatie",
-	"arenella-recruiter-mp-add-btn-publish": "Publiceren",
+	"arenella-recruiter-mp-add-btn-publish": "Publiceer",
 	"arenella-recruiter-mp-add-btn-update": "Update",
 	"arenella-recruiter-mp-add-closing-date": "Sluitingsdatum van de positie",
 	"arenella-recruiter-mp-add-comments": "Opmerkingen",
@@ -457,7 +457,7 @@
 	"arenella-recruiter-mp-detils-btn-back": "Terug",
 	"arenella-recruiter-mp-detils-btn-confirm": "Bevestigen",
 	"arenella-recruiter-mp-detils-btn-delete": "Verwijderen",
-	"arenella-recruiter-mp-detils-btn-edit": "Bewerking",
+	"arenella-recruiter-mp-detils-btn-edit": "Bewerk",
 	"arenella-recruiter-mp-detils-comments": "Opmerkingen",
 	"arenella-recruiter-mp-detils-desc": "Beschrijving",
 	"arenella-recruiter-mp-offer-candidate": "Kandidaat aanbieden",
@@ -644,7 +644,7 @@
 	"arenella-suggestions-profile-btn-back": "Terug",
 	"arenella-suggestions-profile-btn-delete": "Verwijder",
 	"arenella-suggestions-profile-btn-download-cv": "CV downloaden",
-	"arenella-suggestions-profile-btn-edit": "Bewerking",
+	"arenella-suggestions-profile-btn-edit": "Bewerk",
 	"arenella-suggestions-profile-btn-notes": "Opmerkingen",
 	"arenella-suggestions-profile-btn-save": "Kandidaat opslaan",
 	"arenella-suggestions-profile-btn-unsave": "Unsave",
@@ -774,9 +774,7 @@
 	"register-recruiter-success": "Uw aanvraag is ingediend. Na acceptatie wordt er een e-mail verzonden met uw inloggegevens.",
 	"register-recruiter-success-title": "Succes",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
-	"stat-all": "Allemaal",
 	"stat-candidate-availability": "Beschikbaarheid van kandidaten",
-	"stat-general-stats": "Algemene statistieken",
 	"stat-job-board-views": "Jobboard weergaven",
 	"stat-jobboard-views": "Jobboard weergaven",
 	"stat-listing-views": "Job-board weergaven",
