--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -80,8 +80,8 @@
 	"arenella-app-menu-community": "Comunidad",
 	"arenella-app-menu-emails": "Correos electronicos",
 	"arenella-app-menu-faq": "Faq",
-	"arenella-app-menu-job-board": "Bolsa de trabajo",
-	"arenella-app-menu-jobs": "Jobs",
+	"arenella-app-menu-job-board": "Trabajo",
+	"arenella-app-menu-jobs": "Trabajo",
 	"arenella-app-menu-login": "Login",
 	"arenella-app-menu-mp": "Mercado",
 	"arenella-app-menu-new": "Nuevo",
@@ -190,7 +190,7 @@
 	"arenella-listing-contract-week": "Esta semana",
 	"arenella-listing-country": "País",
 	"arenella-listing-curriculum": "CV",
-	"arenella-listing-email-alert": "Crear alerta por correo electrónico",
+	"arenella-listing-email-alert": "Crear Alert",
 	"arenella-listing-email-alert-1": "1/3 Seleccione un tipo de contrato",
 	"arenella-listing-email-alert-2": "2/3 Seleccionar roles de interés",
 	"arenella-listing-email-alert-3": "3/3 Seleccione un Países de interés",
@@ -774,9 +774,7 @@
 	"register-recruiter-success": "Su solicitud ha sido enviada. Una vez aceptado, se enviará un correo electrónico con sus datos de inicio de sesión.",
 	"register-recruiter-success-title": "Éxito",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
-	"stat-all": "todos",
 	"stat-candidate-availability": "Disponibilidad de candidatos",
-	"stat-general-stats": "Estadísticas generales",
 	"stat-job-board-views": "Vistas de la bolsa de trabajo",
 	"stat-jobboard-views": "Vistas de la bolsa de trabajo",
 	"stat-listing-views": "Vistas de la bolsa de trabajo",
