--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -76,18 +76,18 @@
 	"arenella-app-menu-about": "Sur",
 	"arenella-app-menu-account": "Compte",
 	"arenella-app-menu-accounts": "Comptes",
-	"arenella-app-menu-candidate-signup": "Inscription candidats",
+	"arenella-app-menu-candidate-signup": "Inscription Candidat",
 	"arenella-app-menu-community": "Communauté",
 	"arenella-app-menu-emails": "Courriels",
 	"arenella-app-menu-faq": "Faq",
-	"arenella-app-menu-job-board": "Tableau des emplois",
+	"arenella-app-menu-job-board": "Emplois",
 	"arenella-app-menu-jobs": "Emplois",
-	"arenella-app-menu-login": "S'identifier",
+	"arenella-app-menu-login": "Se connecter",
 	"arenella-app-menu-mp": "Marché",
 	"arenella-app-menu-new": "Nouveau",
 	"arenella-app-menu-news-feed": "Nouvelles",
 	"arenella-app-menu-profile": "Profil",
-	"arenella-app-menu-recruiter-signup": "Inscription du recruteur",
+	"arenella-app-menu-recruiter-signup": "Inscription Recruteur",
 	"arenella-app-menu-statistics": "Statistiques",
 	"arenella-app-menu-stats": "Statistiques",
 	"arenella-app-menu-suggestions": "Suggestions",
@@ -123,7 +123,7 @@
 	"arenella-email-btn-undread": "Marquer non lu",
 	"arenella-email-btn-unread": "Marquer non lu",
 	"arenella-email-from": "De",
-	"arenella-email-menu-back": "retourner",
+	"arenella-email-menu-back": "Retour",
 	"arenella-email-msg-reply-failed": "Malheureusement, il n'a pas été possible d'envoyer la réponse pour le moment.",
 	"arenella-email-msg-reply-sent": "La réponse a été envoyée.",
 	"arenella-email-msg-send": "Envoyer",
@@ -171,7 +171,7 @@
 	"arenella-home-sub-title": "Base de données de CV des candidats en informatique - Site d'emploi informatique - IT Marketplace",
 	"arenella-home-title": "Bienvenue à Arenella-ICT",
 	"arenella-infobox-contact": "Contact",
-	"arenella-listing-btn-back": "retourner",
+	"arenella-listing-btn-back": "Retour",
 	"arenella-listing-btn-create": "Créer une alerte",
 	"arenella-listing-btn-publicity": "Publicité",
 	"arenella-listing-btn-send": "Envoyer",
@@ -190,11 +190,11 @@
 	"arenella-listing-contract-week": "Cette semaine",
 	"arenella-listing-country": "Pays",
 	"arenella-listing-curriculum": "CV",
-	"arenella-listing-email-alert": "Créer une alerte par e-mail",
+	"arenella-listing-email-alert": "Créer une alerte",
 	"arenella-listing-email-alert-1": "1/3 Sélectionnez un type de contrat",
 	"arenella-listing-email-alert-2": "2/3 Sélectionnez les rôles qui vous intéressent",
 	"arenella-listing-email-alert-3": "3/3 Sélectionnez un pays d'intérêt",
-	"arenella-listing-email-alert-btn-back": "Retourner",
+	"arenella-listing-email-alert-btn-back": "Retour",
 	"arenella-listing-email-alert-btn-confirm": "Confirmer",
 	"arenella-listing-email-alert-btn-next": "Suivant",
 	"arenella-listing-email-alert-confirm": "Adresse e-mail et confirmer",
@@ -229,10 +229,10 @@
 	"arenella-login-user-email": "Email:",
 	"arenella-login-user-email-sent": "Email envoyé",
 	"arenella-login-user-forgotten-password": "Mot de passe oublié?",
-	"arenella-login-user-forgotten-password-text": "Veuillez entrer votre e-mail et cliquer sur « Réinitialiser ». Un nouveau nom d'utilisateur et un nouveau mot de passe vous seront envoyés par e-mail sous peu.",
+	"arenella-login-user-forgotten-password-text": "Veuillez entrer votre e-mail et cliquer sur « Réinitialisez ». Un nouveau nom d'utilisateur et un nouveau mot de passe vous seront envoyés par e-mail sous peu.",
 	"arenella-login-user-login": "S'identifier",
 	"arenella-login-user-password": "Mot de passe",
-	"arenella-login-user-reset": "Réinitialiser",
+	"arenella-login-user-reset": "Réinitialisez",
 	"arenella-login-user-subscription-login-to-continue": "Veuillez vous reconnecter pour continuer",
 	"arenella-login-user-subscription-thankyour": "Merci de vous être abonné.",
 	"arenella-login-user-username": "Nom d'utilisateur",
@@ -244,7 +244,7 @@
 	"arenella-new-candidate-available-from": "Disponible",
 	"arenella-new-candidate-belgium": "Belgique",
 	"arenella-new-candidate-btn-add": "Ajouter",
-	"arenella-new-candidate-btn-back": "Retourner",
+	"arenella-new-candidate-btn-back": "Retour",
 	"arenella-new-candidate-btn-delete": "Supprimer",
 	"arenella-new-candidate-btn-publish": "Publier",
 	"arenella-new-candidate-candidate-id": "ID du candidat",
@@ -344,7 +344,7 @@
 	"arenella-recruiter-account-lang": "langue préférée",
 	"arenella-recruiter-account-subscriptions": "Abonnements",
 	"arenella-recruiter-account-surname": "Nom de famille",
-	"arenella-recruiter-alerts-btn-back": "Retourner",
+	"arenella-recruiter-alerts-btn-back": "Retour",
 	"arenella-recruiter-alerts-btn-cancel": "Annuler",
 	"arenella-recruiter-alerts-btn-confirm": "Confirmer",
 	"arenella-recruiter-alerts-btn-delete": "Supprimer",
@@ -362,7 +362,7 @@
 	"arenella-recruiter-listing-box-upld-extract-filters-file-type": "Types de fichiers .doc, .docx et pdf jusqu'à 1 Mo",
 	"arenella-recruiter-listing-box-upld-extract-tect": "Coller le texte",
 	"arenella-recruiter-listing-btn-add-job": "Ajouter un travail",
-	"arenella-recruiter-listing-btn-back": "Retourner",
+	"arenella-recruiter-listing-btn-back": "Retour",
 	"arenella-recruiter-listing-btn-confirm": "Confirmer",
 	"arenella-recruiter-listing-btn-create-from-spec": "Créer des spéc",
 	"arenella-recruiter-listing-btn-delete": "Supprimer",
@@ -419,7 +419,7 @@
 	"arenella-recruiter-mp-add-belgium": "Belgique",
 	"arenella-recruiter-mp-add-both": "Les deux",
 	"arenella-recruiter-mp-add-btn-add": "Ajouter",
-	"arenella-recruiter-mp-add-btn-back": "Retourner",
+	"arenella-recruiter-mp-add-btn-back": "Retour",
 	"arenella-recruiter-mp-add-btn-create-by-spec": "Crea per spec",
 	"arenella-recruiter-mp-add-btn-publish": "Publier",
 	"arenella-recruiter-mp-add-btn-update": "Mise à jour",
@@ -454,7 +454,7 @@
 	"arenella-recruiter-mp-btn-make-request": "Faire une requête",
 	"arenella-recruiter-mp-btn-my-roles": "Mes rôles",
 	"arenella-recruiter-mp-btn-request-candidate": "Demander un candidat",
-	"arenella-recruiter-mp-detils-btn-back": "Retourner",
+	"arenella-recruiter-mp-detils-btn-back": "Retour",
 	"arenella-recruiter-mp-detils-btn-confirm": "Confirmer",
 	"arenella-recruiter-mp-detils-btn-delete": "Supprimer",
 	"arenella-recruiter-mp-detils-btn-edit": "Modifier",
@@ -500,7 +500,7 @@
 	"arenella-recruiter-prof-box-contact-failed": "Échec de l'envoi du message",
 	"arenella-recruiter-prof-box-contact-title": "Envoyer le message",
 	"arenella-recruiter-prof-box-contact-titleititle": "Titre",
-	"arenella-recruiter-prof-btn-back": "Retourner",
+	"arenella-recruiter-prof-btn-back": "Retour",
 	"arenella-recruiter-prof-btn-create": "Créer un profil",
 	"arenella-recruiter-prof-btn-edit": "Editer le profil",
 	"arenella-recruiter-prof-btn-save": "Garde",
@@ -625,7 +625,7 @@
 	"arenella-suggestions-english": "Anglais",
 	"arenella-suggestions-experience": "Années d'expérience",
 	"arenella-suggestions-french": "Français",
-	"arenella-suggestions-inlinecv-btn-back": "Retourner",
+	"arenella-suggestions-inlinecv-btn-back": "Retour",
 	"arenella-suggestions-job-title": "Titre d'emploi",
 	"arenella-suggestions-language": "Langues",
 	"arenella-suggestions-permanent": "Perm",
@@ -641,7 +641,7 @@
 	"arenella-suggestions-profile-box-msg-updated": "Mettre à jour",
 	"arenella-suggestions-profile-box-notes-btn-saved": "Garde",
 	"arenella-suggestions-profile-box-notes-hdr": "Notes pour le candidat",
-	"arenella-suggestions-profile-btn-back": "Retourner",
+	"arenella-suggestions-profile-btn-back": "Retour",
 	"arenella-suggestions-profile-btn-delete": "Supprimer",
 	"arenella-suggestions-profile-btn-download-cv": "Télécharger CV",
 	"arenella-suggestions-profile-btn-edit": "Modifier",
@@ -660,7 +660,7 @@
 	"arenella-suggestions-profile-intro-text-3": "années d'expérience. Je suis actuellement à la recherche d'un nouveau rôle.",
 	"arenella-suggestions-profile-intro-text-4": "Je suis basé à",
 	"arenella-suggestions-profile-introduction": "Introduction",
-	"arenella-suggestions-saved-candidate-btn-back": "retourner",
+	"arenella-suggestions-saved-candidate-btn-back": "Retour",
 	"arenella-suggestions-skills": "Compétences",
 	"arenella-suggestions-to": "À",
 	"create-candidate--profile-image": "Il y a eu un problème avec l'image de profil",
@@ -774,9 +774,7 @@
 	"register-recruiter-success": "Votre requête à bien été envoyée. Une fois accepté, un e-mail vous sera envoyé avec vos informations de connexion.",
 	"register-recruiter-success-title": "Succès",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
-	"stat-all": "Tout",
 	"stat-candidate-availability": "Disponibilité des candidats",
-	"stat-general-stats": "Statistiques générales",
 	"stat-job-board-views": "Vues du site d'offres d'emploi",
 	"stat-jobboard-views": "Vues du Jobboard",
 	"stat-listing-views": "Vues du tableau d'emploi",
