Finished testing translate Dutch English and French

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -420,12 +420,12 @@
 	"arenella-recruiter-mp-add-both": "Both",
 	"arenella-recruiter-mp-add-btn-add": "Add",
 	"arenella-recruiter-mp-add-btn-back": "Back",
-	"arenella-recruiter-mp-add-btn-create-by-spec": "Create by Spec",
+	"arenella-recruiter-mp-add-btn-create-by-spec": "Create by spec",
 	"arenella-recruiter-mp-add-btn-publish": "Publish",
 	"arenella-recruiter-mp-add-btn-update": "Update",
 	"arenella-recruiter-mp-add-closing-date": "Position Closing Date",
 	"arenella-recruiter-mp-add-comments": "Comments",
-	"arenella-recruiter-mp-add-contract": "Contract Type",
+	"arenella-recruiter-mp-add-contract": "Contract",
 	"arenella-recruiter-mp-add-contract-type": "Contract Type",
 	"arenella-recruiter-mp-add-country": "Country",
 	"arenella-recruiter-mp-add-description": "Description",
