--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -420,12 +420,12 @@
 	"arenella-recruiter-mp-add-both": "Ambos",
 	"arenella-recruiter-mp-add-btn-add": "Agregar",
 	"arenella-recruiter-mp-add-btn-back": "Retroceder",
-	"arenella-recruiter-mp-add-btn-create-by-spec": "Crear por especificación",
+	"arenella-recruiter-mp-add-btn-create-by-spec": "Crear por espec",
 	"arenella-recruiter-mp-add-btn-publish": "Publicar",
 	"arenella-recruiter-mp-add-btn-update": "Actualizar",
 	"arenella-recruiter-mp-add-closing-date": "Fecha de cierre de posición",
 	"arenella-recruiter-mp-add-comments": "Comentarios",
-	"arenella-recruiter-mp-add-contract": "Tipo de contrato",
+	"arenella-recruiter-mp-add-contract": "Contrato",
 	"arenella-recruiter-mp-add-contract-type": "Tipo de contrato",
 	"arenella-recruiter-mp-add-country": "País",
 	"arenella-recruiter-mp-add-description": "Descripción",
