--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -425,7 +425,7 @@
 	"arenella-recruiter-mp-add-btn-update": "Mise à jour",
 	"arenella-recruiter-mp-add-closing-date": "Date de clôture du poste",
 	"arenella-recruiter-mp-add-comments": "Commentaires",
-	"arenella-recruiter-mp-add-contract": "Type de contrat",
+	"arenella-recruiter-mp-add-contract": "Contrat",
 	"arenella-recruiter-mp-add-contract-type": "Type de contrat",
 	"arenella-recruiter-mp-add-country": "Pays",
 	"arenella-recruiter-mp-add-description": "Description",
