--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -420,12 +420,12 @@
 	"arenella-recruiter-mp-add-both": "Entrambi",
 	"arenella-recruiter-mp-add-btn-add": "Aggiungere",
 	"arenella-recruiter-mp-add-btn-back": "Indietro",
-	"arenella-recruiter-mp-add-btn-create-by-spec": "Créer par spécification",
+	"arenella-recruiter-mp-add-btn-create-by-spec": "Créer par spéc",
 	"arenella-recruiter-mp-add-btn-publish": "Pubblicare",
 	"arenella-recruiter-mp-add-btn-update": "Aggiornamento",
 	"arenella-recruiter-mp-add-closing-date": "Data di chiusura della posizione",
 	"arenella-recruiter-mp-add-comments": "Commenti",
-	"arenella-recruiter-mp-add-contract": "Tipo de contratto",
+	"arenella-recruiter-mp-add-contract": "Contratto",
 	"arenella-recruiter-mp-add-contract-type": "Tipo di Contratto",
 	"arenella-recruiter-mp-add-country": "Paese",
 	"arenella-recruiter-mp-add-description": "Descrizione",
