--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -130,7 +130,7 @@
 	"arenella-email-msg-send-reply": "Stuur antwoord",
 	"arenella-email-none-1": "U heeft momenteel geen e-mails.",
 	"arenella-email-none-2": "E-mails worden door het systeem gegenereerd, bijvoorbeeld wanneer een sitebezoeker reageert op een van uw berichten op de vacaturebank.",
-	"arenella-email-sent": "Verstuurd",
+	"arenella-email-sent": "Verzonden",
 	"arenella-email-subject": "Onderwerp",
 	"arenella-faqs-header": "CV-database voor IT-kandidaten - IT-vacaturebank - IT-marktplaats",
 	"arenella-faqs-q1-answer": "De proefperiode van 30 dagen is volledig gratis. U heeft volledige toegang tot de functies van de site. Er zijn geen verborgen kosten of marges. Je kunt er zoveel plaatsen\nkandidaten zoals jij wilt tijdens de proefperiode en er zijn geen kosten aan verbonden",
@@ -298,7 +298,7 @@
 	"arenella-recruiter-account-detail-payment-company-name": "Bedrijfsnaam",
 	"arenella-recruiter-account-detail-payment-company-tax-num": "Vennootschapsbelastingnummer",
 	"arenella-recruiter-account-detail-payment-details": "Betalingsdetails",
-	"arenella-recruiter-account-detail-payment-reg-num": "Bedrijfsregistratienummer",
+	"arenella-recruiter-account-detail-payment-reg-num": "Bedrijf registratienummer",
 	"arenella-recruiter-account-detail-subs-active": "Geactiveerd / Activeert",
 	"arenella-recruiter-account-detail-subs-created": "Gemaakt",
 	"arenella-recruiter-account-detail-subs-id": "Abonnement-ID",
@@ -323,7 +323,7 @@
 	"arenella-recruiter-account-details": "Accountgegevens",
 	"arenella-recruiter-account-details-company-address": "Bedrijfsadres",
 	"arenella-recruiter-account-details-company-country": "Bedrijfsland",
-	"arenella-recruiter-account-details-company-reg-num": "Bedrijfsregistratienummer",
+	"arenella-recruiter-account-details-company-reg-num": "Bedrijf registratienummer",
 	"arenella-recruiter-account-details-company-vat-num": "BTW-nummer bedrijf",
 	"arenella-recruiter-account-details-month-1": "1 maand",
 	"arenella-recruiter-account-details-month-1-cost": "10 euro ex BTW",
@@ -420,12 +420,12 @@
 	"arenella-recruiter-mp-add-both": "Beide",
 	"arenella-recruiter-mp-add-btn-add": "Toevoegen",
 	"arenella-recruiter-mp-add-btn-back": "Terug",
-	"arenella-recruiter-mp-add-btn-create-by-spec": "Creëer op specificatie",
+	"arenella-recruiter-mp-add-btn-create-by-spec": "Creëer op spec",
 	"arenella-recruiter-mp-add-btn-publish": "Publiceer",
 	"arenella-recruiter-mp-add-btn-update": "Update",
 	"arenella-recruiter-mp-add-closing-date": "Sluitingsdatum van de positie",
 	"arenella-recruiter-mp-add-comments": "Opmerkingen",
-	"arenella-recruiter-mp-add-contract": "Contract type",
+	"arenella-recruiter-mp-add-contract": "Contract",
 	"arenella-recruiter-mp-add-contract-type": "Contract type",
 	"arenella-recruiter-mp-add-country": "Land",
 	"arenella-recruiter-mp-add-description": "Beschrijving",
@@ -541,7 +541,7 @@
 	"arenella-recruiter-signup-surname": "Achternaam",
 	"arenella-recruiter-stats-btn-refresh": "Vernieuwen",
 	"arenella-recruiter-stats-gen-active-users": "Actieve gebruikers",
-	"arenella-recruiter-stats-gen-filter-by-post": "Filter op bericht",
+	"arenella-recruiter-stats-gen-filter-by-post": "Filter op Baan",
 	"arenella-recruiter-stats-gen-hdr": "Beschikbaarheid van kandidaten",
 	"arenella-recruiter-stats-general": "Algemeen",
 	"arenella-recruiter-stats-jb-stats": "Statistieken van de vacaturebank",
@@ -551,9 +551,9 @@
 	"arenella-recruiter-stats-jb-stats-4": "Wanneer u uw eigen berichten bekijkt, kunt u de knop 'Publiceren' gebruiken om een ​​bericht te genereren dat u kunt kopiëren en plakken op sociale media, waarin de hashtags voor de\nvaardigheden die in uw bericht zijn geselecteerd.",
 	"arenella-recruiter-stats-jb-totals": "Totalen",
 	"arenella-recruiter-stats-jb-views": "Jobboard weergaven",
-	"arenella-recruiter-stats-jb-views-this-week": "Advertenties bekeken deze week",
+	"arenella-recruiter-stats-jb-views-this-week": "Advertenties deze week bekeken",
 	"arenella-recruiter-stats-jb-views-today": "Advertenties vandaag bekeken",
-	"arenella-recruiter-stats-jobboard": "Jobbord",
+	"arenella-recruiter-stats-jobboard": "Banen",
 	"arenella-recruiter-stats-totals": "Totalen",
 	"arenella-stats-added-candidates": "De volgende nieuwe kandidaten zijn toegevoegd:",
 	"arenella-stats-availability": "Beschikbaarheid",
@@ -588,7 +588,7 @@
 	"arenella-stats-recruiter-downloads-btn-week": "Deze week",
 	"arenella-stats-recruiter-downloads-totals": "Totalen",
 	"arenella-stats-recruiter-downloads-views-today": "Advertenties vandaag bekeken",
-	"arenella-stats-recruiter-downloads-views-week": "Advertenties bekeken deze week",
+	"arenella-stats-recruiter-downloads-views-week": "Advertenties deze week bekeken",
 	"arenella-stats-searches": "Zoekopdrachten",
 	"arenella-stats-searches-btn-today": "Vandaag",
 	"arenella-stats-searches-btn-week": "Deze week",
