--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -625,9 +625,15 @@
 	"arenella-suggestions-english": "English",
 	"arenella-suggestions-experience": "Years Exp",
 	"arenella-suggestions-french": "French",
+	"arenella-suggestions-include": "Include",
+	"arenella-suggestions-include-unavailable-candidates": "Unavailable Candidates",
 	"arenella-suggestions-inlinecv-btn-back": "Back",
 	"arenella-suggestions-job-title": "Job Title",
 	"arenella-suggestions-language": "Languages",
+	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Choose Subscription",
+	"arenella-suggestions-paid-subscription-option": "Paid subscription feature",
+	"arenella-suggestions-paid-subscription-text-1": "This options is only available to users with a paid subscription.",
+	"arenella-suggestions-paid-subscription-text-2": "You can choose a paid subscription by clicking on the following link",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Send",
 	"arenella-suggestions-profile-box-contact-hdr": "Message Candidate",
