--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -625,9 +625,15 @@
 	"arenella-suggestions-english": "Inglés",
 	"arenella-suggestions-experience": "Años de experiencia",
 	"arenella-suggestions-french": "Francés",
+	"arenella-suggestions-include": "Incluir",
+	"arenella-suggestions-include-unavailable-candidates": "Candidatos no disponibles",
 	"arenella-suggestions-inlinecv-btn-back": "Regresa",
 	"arenella-suggestions-job-title": "Título profesional",
 	"arenella-suggestions-language": "Idiomas",
+	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Elija Suscripción",
+	"arenella-suggestions-paid-subscription-option": "Función de suscripción paga",
+	"arenella-suggestions-paid-subscription-text-1": "Esta opción solo está disponible para usuarios con una suscripción paga.",
+	"arenella-suggestions-paid-subscription-text-2": "Puedes elegir una suscripción paga haciendo clic en el siguiente enlace",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Enviar",
 	"arenella-suggestions-profile-box-contact-hdr": "Mensaje candidato",
