--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -625,9 +625,15 @@
 	"arenella-suggestions-english": "Inglese",
 	"arenella-suggestions-experience": "Anni di esperienza",
 	"arenella-suggestions-french": "Francese",
+	"arenella-suggestions-include": "Includere",
+	"arenella-suggestions-include-unavailable-candidates": "Candidati non disponibili",
 	"arenella-suggestions-inlinecv-btn-back": "Indietro",
 	"arenella-suggestions-job-title": "Titolo di lavoro",
 	"arenella-suggestions-language": "Lingue",
+	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Scegli Abbonamento",
+	"arenella-suggestions-paid-subscription-option": "Funzionalità di abbonamento a pagamento",
+	"arenella-suggestions-paid-subscription-text-1": "Questa opzione è disponibile solo per gli utenti con un abbonamento a pagamento.",
+	"arenella-suggestions-paid-subscription-text-2": "Puoi scegliere un abbonamento a pagamento cliccando sul seguente link",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Inviare",
 	"arenella-suggestions-profile-box-contact-hdr": "Candidato al messaggio",
