--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -73,7 +73,7 @@
 	"arenella-app-credits-mp": "Je hebt nog {{creditsMarketplace}} tokens om kandidaten aan te vragen op de Marktplaats.",
 	"arenella-app-credits-text-footer": "Als u voor een betaald abonnement kiest, krijgt u onbeperkte toegang tot alle sitefuncties gedurende de looptijd van het abonnement.",
 	"arenella-app-credits-wait-for-credits": "Wacht op nieuwe credits",
-	"arenella-app-menu-about": "Wat betreft",
+	"arenella-app-menu-about": "Over ons",
 	"arenella-app-menu-account": "Account",
 	"arenella-app-menu-accounts": "Accounts",
 	"arenella-app-menu-candidate-signup": "Kandidaat aanmelden",
@@ -625,9 +625,15 @@
 	"arenella-suggestions-english": "Engels",
 	"arenella-suggestions-experience": "Jaren ervaring",
 	"arenella-suggestions-french": "Frans",
+	"arenella-suggestions-include": "Omvatten",
+	"arenella-suggestions-include-unavailable-candidates": "Niet beschikbare kandidaten",
 	"arenella-suggestions-inlinecv-btn-back": "Terug",
 	"arenella-suggestions-job-title": "Functietitel",
 	"arenella-suggestions-language": "Talen",
+	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Kies abonnement",
+	"arenella-suggestions-paid-subscription-option": "Betaalde abonnementsfunctie",
+	"arenella-suggestions-paid-subscription-text-1": "Deze optie is alleen beschikbaar voor gebruikers met een betaald abonnement.",
+	"arenella-suggestions-paid-subscription-text-2": "U kunt een betaald abonnement kiezen door op de volgende link te klikken",
 	"arenella-suggestions-permanent": "Vaste",
 	"arenella-suggestions-profile-box-contact-btn-send": "Versturen",
 	"arenella-suggestions-profile-box-contact-hdr": "Bericht kandidaat",
