--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -73,7 +73,7 @@
 	"arenella-app-credits-mp": "Vous disposez encore de {{creditsMarketplace}}  jetons pour solliciter des candidats sur la Marketplace.",
 	"arenella-app-credits-text-footer": "Opter pour un abonnement payant offrira un accès illimité à toutes les fonctionnalités du site pendant toute la durée de l'abonnement.",
 	"arenella-app-credits-wait-for-credits": "Attendez de nouveaux crédits",
-	"arenella-app-menu-about": "Sur",
+	"arenella-app-menu-about": "Sur Nous",
 	"arenella-app-menu-account": "Compte",
 	"arenella-app-menu-accounts": "Comptes",
 	"arenella-app-menu-candidate-signup": "Inscription Candidat",
@@ -625,9 +625,15 @@
 	"arenella-suggestions-english": "Anglais",
 	"arenella-suggestions-experience": "Années d'expérience",
 	"arenella-suggestions-french": "Français",
+	"arenella-suggestions-include": "Comprendre",
+	"arenella-suggestions-include-unavailable-candidates": "Candidats indisponibles",
 	"arenella-suggestions-inlinecv-btn-back": "Retour",
 	"arenella-suggestions-job-title": "Titre d'emploi",
 	"arenella-suggestions-language": "Langues",
+	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Choisissez l'abonnement",
+	"arenella-suggestions-paid-subscription-option": "Fonctionnalité d'abonnement payant",
+	"arenella-suggestions-paid-subscription-text-1": "Cette option n&#39;est disponible que pour les utilisateurs disposant d&#39;un abonnement payant.",
+	"arenella-suggestions-paid-subscription-text-2": "Vous pouvez choisir un abonnement payant en cliquant sur le lien suivant",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Envoyer",
 	"arenella-suggestions-profile-box-contact-hdr": "Message candidat",
